--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
         <img src="https://d3ieicw58ybon5.cloudfront.net/ex/610.191/u/c2ea270de7764fb1a92f60080d27b0da.jpg" alt="list-banner">
     </div>
-
+<marquee>👌you like that SAM👏</marquee>
     <div id="banner">What to watch?</div>
         <div id="anime-search">
             <form class ="search-anime">
